# restaurant-api

./: README.md  Simple Restaurant API.postman_collection.json  docker-compose.yml  schema.sql
client/: Cargo.toml  README.md
client/src/: main.rs
server/: .env  Cargo.toml  README.md
server/src/: handler.rs  main.rs  model.rs
