[package]
name = "restaurant-api"
version = "0.1.0"
authors = ["Arun verma <arun.verma8007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
serde = "1.0"
dotenv = "0.15.0"
anyhow = "1.0.40"
listenfd = "0.3.3"
env_logger = "0.7.1"
log = "0.4.14"
futures = "0.3.13"
serde_json = "1.0.51"
rand = "0.8.3"
actix-rt = "2.2.0"